name:                db-tool
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/db-tool#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Graphviz
                       Parse
                       Pretty
                       Types
                       Util
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , graphviz
                     , text
                     , containers
  default-language:    Haskell2010

executable db-tool-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , db-tool
                     , optparse-applicative
                     , split
                     , containers
  default-language:    Haskell2010

executable db-tool-dom
  hs-source-dirs:      dom
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , db-tool
                     , reflex
                     , reflex-dom
                     , lens
                     , containers
                     , ghcjs-base
                     , ghcjs-dom
  default-language:    Haskell2010

test-suite db-tool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , db-tool
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/db-tool
