name:                db-tool
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/db-tool#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FDTools, ERTools, ERToFD
  other-modules:       FDTools.Graphviz
                       FDTools.Parse
                       FDTools.Pretty
                       FDTools.Types
                       FDTools.Util
                       ERTools.Types
                       ERTools.Parse
                       ERTools.Graphviz
  ghc-options:         -O3
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , graphviz
                     , text
                     , containers
  default-language:    Haskell2010

executable db-tool-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  if impl(ghcjs)
    buildable: False
  else
    build-depends:       base
                       , db-tool
                       , optparse-applicative
                       , split
                       , containers
  default-language:    Haskell2010

executable db-tool-dom
  hs-source-dirs:      dom
  main-is:             Main.hs
  other-modules:       Util
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  if impl(ghcjs)
    build-depends:       base
                       , db-tool
                       , reflex
                       , reflex-dom
                       , reflex-dom-helpers
                       , lens
                       , containers
                       , ghcjs-base
                       , ghcjs-dom
  else
    buildable: False
  default-language:    Haskell2010

executable er-tool-dom
  hs-source-dirs:      dom
  main-is:             ERTool.hs
  other-modules:       Util
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  if impl(ghcjs)
    build-depends:       base
                       , db-tool
                       , reflex
                       , reflex-dom
                       , reflex-dom-helpers
                       , lens
                       , containers
                       , ghcjs-base
                       , ghcjs-dom
  else
    buildable: False
  default-language:    Haskell2010

Test-Suite test
  Type:           exitcode-stdio-1.0
  Main-Is:        Main.hs
  hs-source-dirs: test
  Build-Depends:   base >=4.7 && <5
                 , db-tool
                 , hspec
                 , QuickCheck
                 , parsec
                 , graphviz
                 , text
                 , containers
  Ghc-Options:  -rtsopts -Wall -fno-warn-unused-do-bind -threaded
  Default-Language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/lierdakil/dbtool
